# vibe

vibe-py/: lint  pyproject.toml  venv
vibe-py/src/vibe/: app.py  chat.py  config.py  conversation.py  eleven_labs.py  functions.py  language_model.py  main.py  models.py  sambanova.py  tools.py  triton.py  tts.py  vad.py
vibe-py/src/vibe/docs/: config.yaml
vibe-py/src/vibe/utils/: audio.py  constants.py  datetime.py  http.py  interval.py  logger.py  microphone.py  process.py  pydantic.py  queue.py  sink.py  string_sequence.py  task_queue.py  time.py  typing.py  utils.py
