[project]
name = "vibe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "michael", email = "66692526+mkxl@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.1",
    "notebook>=7.4.4",
    "orjson>=3.10.18",
    "pydub>=0.25.1",
    "silero-vad>=5.1.2",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "typer>=0.16.0",
]

[project.scripts]
vibe = "vibe.app:App.cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pylint>=3.3.7",
    "pyproject-flake8>=7.0.0",
    "ruff>=0.12.2",
    "ty>=0.0.1a13",
]

[tool.black]
line-length = 120

# NOTE: `ignore = ""` required to disable default ignores
[tool.flake8]
ignore = ""
max-line-length = 120

[tool.isort]
known_vibe = "vibe"
line_length = 120
profile = "black"
sections = [
  'FUTURE',
  'STDLIB',
  'THIRDPARTY',
  'VIBE',
  'FIRSTPARTY',
  'LOCALFOLDER',
]
src_paths = "*"

[tool.pylint.basic]
good-names = [
    "P"
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.master]
extension-pkg-allow-list = [
    "orjson",
]

[tool.pylint.messages_control]
disable = [
    "fixme",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-few-public-methods",
]

[tool.pylint.reports]
output-format = "colorized"

[tool.ruff]
line-length = 120
target-version = "py313"
